--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
+org.gradle.unsafe.configuration-cache=true
