--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.noahjutz.gymroutines">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".GymRoutinesApplication"
